# carnet-ai-recognition-cli

./: README.md  auth.py  lambda_function.py  main.py  myauto_parser.py  pyproject.toml
